<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/workout_insdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_date"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/date_custom_box"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/custom_box"/>

            <EditText
                android:id="@+id/date_sample_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/date_sample_text"
                android:padding="4dp"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/workout_insdistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_distance"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/distance_custom_box"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/custom_box"/>

            <EditText
                android:id="@+id/distance_sample_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/distance_sample_text"
                android:padding="4dp"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/workout_insduration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_duration"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/duration_custom_box"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/custom_box"/>

            <EditText
                android:id="@+id/duration_sample_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/duration_sample_text"
                android:padding="4dp"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/workout_insaverage_pr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_average_pr"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/average_pr_custom_box"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/custom_box"/>

            <EditText
                android:id="@+id/average_pace_rate_sample_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/average_pr_sample_text"
                android:padding="4dp"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/workout_choose_wk_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workout_type"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/workout_type_custom_box"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/custom_box"/>

            <Spinner
                android:id="@+id/spinner_workout_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="16dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>

        <Button
            android:id="@+id/add_workout_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_button"
            android:text="ADD WORKOUT"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#ffffff"/>


</LinearLayout>