<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/mDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="4dp"
        tools:text="00/00/0000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:background="#ffffff"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mDistanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Distance"/>

                <TextView
                    android:id="@+id/mDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mDistanceLabel"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    tools:text="00.00"/>

            </RelativeLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#f1f1f1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Duration"/>

                <TextView
                    android:id="@+id/mDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mTimeLabel"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="00:00:00"/>

            </RelativeLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#f1f1f1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mAvgPRLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/AvgPR"/>

                <TextView
                    android:id="@+id/mAvgPR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mAvgPRLabel"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="00:00"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>